--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -84,3 +84,30 @@
     @apply p-4 lg:text-xl text-lg;
 }
 
+.contact-section {
+    @apply h-screen bg-reception bg-cover bg-center bg-black/80 bg-blend-multiply text-gray-200;
+}
+
+.contact-section > h2 {
+    @apply pt-20 text-gray-200 text-5xl font-semibold text-center underline;
+}
+
+.contact-form {
+    @apply backdrop-blur-md text-xl max-w-md mx-auto mt-10 p-8 bg-gray-800/50 rounded-lg shadow-lg;
+}
+
+.contact-form > div {
+    @apply mb-4;
+}
+
+.contact-form label {
+    @apply block text-gray-300 mb-2;
+}
+
+.contact-form input {
+    @apply w-full p-2 rounded bg-gray-700 text-gray-200;
+}
+
+.contact-form button[type="submit"] {
+    @apply w-full bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500;
+}
