--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 @theme {
   --font-playfair: 'Playfair Display', serif;
   --font-inter: 'Inter', sans-serif;
+  --color-wood: #0b0808;
 }
 
 
@@ -98,7 +99,7 @@
 }
 
 #reservation-form {
-    @apply m-auto w-full lg:w-1/2 flex flex-col backdrop-blur-sm text-xl font-inter md:text-2xl max-w-md md:max-w-xl p-8 bg-gray-900/70 rounded-lg shadow-2xl;
+    @apply m-auto w-full lg:w-1/2 flex flex-col backdrop-blur-sm text-xl font-inter md:text-2xl max-w-md md:max-w-xl p-8 bg-wood/70 rounded-lg shadow-2xl;
 }
 
 #reservation-form label {
@@ -122,7 +123,7 @@
 }
 
 #contact-form {
-    @apply w-full lg:w-1/2 m-auto flex flex-col backdrop-blur-sm text-xl font-inter md:text-2xl max-w-md md:max-w-xl p-8 bg-gray-900/70 rounded-lg shadow-2xl;
+    @apply w-full lg:w-1/2 m-auto flex flex-col backdrop-blur-sm text-xl font-inter md:text-2xl max-w-md md:max-w-xl p-8 bg-neutral-900/70 rounded-lg shadow-2xl;
 }
 
 #contact-form label {
