--- a/main.css
+++ b/main.css
@@ -252,11 +252,14 @@
   .z-20 {
     z-index: 20;
   }
+  .m-auto {
+    margin: auto;
+  }
   .mx-auto {
     margin-inline: auto;
   }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
+  .my-12 {
+    margin-block: calc(var(--spacing) * 12);
   }
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
@@ -379,9 +382,6 @@
   .h-screen {
     height: 100vh;
   }
-  .min-h-\[60vh\] {
-    min-height: 60vh;
-  }
   .min-h-screen {
     min-height: 100vh;
   }
@@ -407,6 +407,9 @@
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .flex-col {
+    flex-direction: column;
   }
   .content-center {
     align-content: center;
@@ -599,11 +602,6 @@
       height: 50vh;
     }
   }
-  .sm\:grid-cols-2 {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
   .sm\:justify-start {
     @media (width >= 40rem) {
       justify-content: flex-start;
@@ -626,6 +624,16 @@
       line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
+  .md\:h-screen {
+    @media (width >= 48rem) {
+      height: 100vh;
+    }
+  }
+  .md\:grid-cols-2 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
   .lg\:h-\[92vh\] {
     @media (width >= 64rem) {
       height: 92vh;
@@ -641,11 +649,6 @@
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
-  .lg\:grid-cols-4 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-    }
-  }
   .lg\:bg-linear-to-b {
     @media (width >= 64rem) {
       --tw-gradient-position: to bottom;
@@ -659,6 +662,11 @@
     @media (width >= 64rem) {
       font-size: var(--text-7xl);
       line-height: var(--tw-leading, var(--text-7xl--line-height));
+    }
+  }
+  .xl\:w-1\/2 {
+    @media (width >= 80rem) {
+      width: calc(1/2 * 100%);
     }
   }
 }
